commit translated contents

--- a/docs/visual-basic/misc/bc30027.md
+++ b/docs/visual-basic/misc/bc30027.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30027
 ms.assetid: 5ee1a8ae-d0cb-437d-966e-aba0ea4d3106
-ms.openlocfilehash: b4f5411b035c31449758eab4f71cdf46e39a9114
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1f31033d091fbf3774cc0f511bb8e678b222f276
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64608895"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84404044"
 ---
 # <a name="end-function-expected"></a>Previsto 'End Function'
 Un'istruzione `End` deve corrispondere al blocco che termina. Una definizione della routine `Function` non è stata terminata correttamente.  
@@ -25,5 +25,5 @@ Un'istruzione `End` deve corrispondere al blocco che termina. Una definizione de
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [Istruzione End](../../visual-basic/language-reference/statements/end-statement.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
+- [Istruzione End](../language-reference/statements/end-statement.md)
