--- a/docs/visual-basic/misc/bc30300.md
+++ b/docs/visual-basic/misc/bc30300.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i parametri facoltativi
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per i parametri facoltativi"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30300
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30300
 ms.assetid: adb44ceb-57a0-4123-8fd8-7eb83c3f601f
-ms.openlocfilehash: 2c7521777f45133b8c58b9de3db550fcba786fce
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c1bd6300d62b489ab723cec3bc877325d92403bb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663957"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406223"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-optional-parameters"></a>«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i parametri facoltativi
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-optional-parameters"></a>' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per i parametri facoltativi
 Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per i parametri facoltativi. Un metodo con un parametro facoltativo è equivalente a due metodi di overload, uno con il parametro facoltativo e l'altro senza. Non è quindi possibile eseguire l'overload di un metodo con un elenco di argomenti corrispondente a uno di questi.  
   
  **ID errore:** BC30300  
@@ -25,5 +25,5 @@ Si è provato a eseguire l'overload di un metodo con un altro metodo che è dive
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload della routine](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [Considerazioni sull'overload di routine](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [Overload della routine](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [Considerazioni sull'overload di routine](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
