--- a/docs/visual-basic/misc/bc30332.md
+++ b/docs/visual-basic/misc/bc30332.md
@@ -1,5 +1,5 @@
 ---
-title: Valore di tipo '<type1>'non può essere convertito in'<type2>'perché'<type3>'non è derivato da'<type4>'
+title: Non è possibile convertire il valore di tipo ' <type1> ' in ' <type2> ' perché' <type3> ' non è derivato da' <type4> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30332
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30332
 ms.assetid: 290081f8-eeb5-4b5c-818b-7159fe91f1ec
-ms.openlocfilehash: 6b9b9a7a32c2901b3f5e2e3be93c3cd329da77ce
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4ea3a6de03c1972295b4ca172482c7f2d77456bc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663830"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406119"
 ---
-# <a name="value-of-type-type1-cannot-be-converted-to-type2-because-type3-is-not-derived-from-type4"></a>Valore di tipo '\<type1 >' non può essere convertito in '\<type2 >' perché '\<type3 >' non è derivato da '\<type4 >'
+# <a name="value-of-type-type1-cannot-be-converted-to-type2-because-type3-is-not-derived-from-type4"></a>Non è possibile convertire il valore di tipo ' \<type1> ' in ' \<type2> ' perché' \<type3> ' non è derivato da' \<type4> '
 Un'istruzione tenta di convertire un tipo di matrice in un altro tipo di matrice in una situazione in cui i tipi di dati degli elementi delle matrici non sono entrambi tipi riferimento o in cui una conversione verso un tipo di dati più grande o più piccolo non è possibile tra i tipi di elemento delle due matrici.  
   
  **ID errore:** BC30332  
@@ -25,5 +25,5 @@ Un'istruzione tenta di convertire un tipo di matrice in un altro tipo di matrice
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
-- [Conversioni di matrice](../../visual-basic/programming-guide/language-features/data-types/array-conversions.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
+- [Conversioni di matrice](../programming-guide/language-features/data-types/array-conversions.md)
