--- a/docs/visual-basic/misc/bc30368.md
+++ b/docs/visual-basic/misc/bc30368.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ParamArray'
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per i parametri dichiarati come ' ParamArray '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30368
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30368
 ms.assetid: 6111df0c-fc3e-40b2-b536-effbd132ef72
-ms.openlocfilehash: 720638a46acbf3decf89dc57ff3c23104ce616f9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f11311801d09a35bc0287ff5e1ba0e3894afbe4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64636348"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403836"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-paramarray"></a>«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ParamArray'
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-paramarray"></a>' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per i parametri dichiarati come ' ParamArray '
 Si è provato a eseguire l'overload di due metodi che si differenziano solo per uno o più parametri `ParamArray` . Per il compilatore, una routine con un parametro `ParamArray` ha un numero infinito di overload che si differenziano tra loro per ciò che viene passato alla matrice di parametri.  
   
  **ID errore:** BC30368  
@@ -25,5 +25,5 @@ Si è provato a eseguire l'overload di due metodi che si differenziano solo per 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Considerazioni sull'overload di routine](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
-- [Matrici di parametri](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
+- [Considerazioni sull'overload di routine](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [Matrici di parametri](../programming-guide/language-features/procedures/parameter-arrays.md)
