--- a/docs/visual-basic/misc/bc30718.md
+++ b/docs/visual-basic/misc/bc30718.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30718
 ms.assetid: 71990af6-8aaa-484a-a5a8-6ac399978537
-ms.openlocfilehash: cb784bb8d24930e84c68e0f3202713dd0c6e527a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f37e93426c2e123019d7f3ed70bab38f50c77c53
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657327"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406041"
 ---
 # <a name="select-statements-are-not-valid-in-the-immediate-window"></a>Le istruzioni 'Select' non sono valide nella finestra di controllo immediato
 Le istruzioni`Select` possono essere usate solo nel codice sorgente.  
@@ -25,4 +25,4 @@ Le istruzioni`Select` possono essere usate solo nel codice sorgente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
