--- a/docs/visual-basic/misc/bc31060.md
+++ b/docs/visual-basic/misc/bc31060.md
@@ -1,5 +1,5 @@
 ---
-title: «<propertyname>'definisce in modo implicito'<membername>', che è in conflitto con un membro con lo stesso nome nello <type> '<typename>»
+title: "' <propertyname> ' definisce in modo implicito ' <membername> ', che è in conflitto con un membro con lo stesso nome in <type> ' <typename> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31060
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31060
 ms.assetid: 33d3ca8b-711b-4f76-9b79-d5428b28dd2f
-ms.openlocfilehash: 017ec88404688c7bf195178fd2083238e72becd8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 230c88a95085ad00a3d4ee7ab567a71020909995
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64601767"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405885"
 ---
-# <a name="propertyname-implicitly-defines-membername-which-conflicts-with-a-member-of-the-same-name-in-type-typename"></a>'\<NomeProprietà >' definisce in modo implicito '\<nomeMembro >', che è in conflitto con un membro con lo stesso nome nello \<tipo > '\<nomeTipo >'
+# <a name="propertyname-implicitly-defines-membername-which-conflicts-with-a-member-of-the-same-name-in-type-typename"></a>' \<propertyname> ' definisce in modo implicito ' \<membername> ', che è in conflitto con un membro con lo stesso nome in \<type> ' \<typename> '
 Il nome di un membro di tipo è in conflitto con il nome di un membro creato in modo implicito per una proprietà. Le proprietà creano in modo implicito diverse variabili implicite che possono essere in conflitto con i membri definiti.  
   
  **ID errore:** BC31060  
@@ -25,4 +25,4 @@ Il nome di un membro di tipo è in conflitto con il nome di un membro creato in 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
