--- a/docs/visual-basic/misc/bc31061.md
+++ b/docs/visual-basic/misc/bc31061.md
@@ -1,5 +1,5 @@
 ---
-title: <type1>'<typename1>' è in conflitto con un membro dichiarato in modo implicito per <type2> l'<typename2>evento '<eventname>' in ''
+title: <type1>' <typename1> ' è in conflitto con un membro dichiarato in modo implicito per l'evento ' <eventname> ' in <type2> ' <typename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31061
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31061
 ms.assetid: de5b1121-8c8f-4aba-a3e7-1e3e60df0dc5
-ms.openlocfilehash: a3f4611c3b9bac52c2e47fa4864f29fd1dc5c410
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5b9d407dd9ccadabf49d0da1e7f1bcd525a072b2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664652"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405872"
 ---
-# <a name="type1-typename1-conflicts-with-a-member-implicitly-declared-for-event-eventname-in-type2-typename2"></a>\<tipo1 >'\<NomeTipo1 >' è in conflitto con un membro dichiarato in modo implicito per l'evento ' \<\<EventName >\<' in tipo2 >' NomeTipo2 >'
+# <a name="type1-typename1-conflicts-with-a-member-implicitly-declared-for-event-eventname-in-type2-typename2"></a>\<type1>' \<typename1> ' è in conflitto con un membro dichiarato in modo implicito per l'evento ' \<eventname> ' in \<type2> ' \<typename2> '
 Il nome di un membro di tipo è in conflitto con il nome di un membro creato in modo implicito per un evento. Gli eventi creano in modo implicito diverse variabili implicite. Ad esempio, la dichiarazione `Event X` dichiara in modo implicito i nomi `XEventHandler`, `XEvent`, `add_X`e `remove_X`.  
   
  **ID errore:** BC31061  
@@ -26,4 +26,4 @@ Il nome di un membro di tipo è in conflitto con il nome di un membro creato in 
 ## <a name="see-also"></a>Vedere anche
 
 - [Istruzioni di dichiarazione](../programming-guide/language-features/statements.md#declaration-statements)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Events](../programming-guide/language-features/events/index.md)
