--- a/docs/visual-basic/misc/bc31069.md
+++ b/docs/visual-basic/misc/bc31069.md
@@ -1,5 +1,5 @@
 ---
-title: Enumeratore in un'interfaccia non può essere dichiarato '<specifier>'
+title: L'enumerazione in un'interfaccia non può essere dichiarata come ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31069
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31069
 ms.assetid: 26025ba0-c710-4fd4-8f36-f931db142d96
-ms.openlocfilehash: 5125bb76c3ac8f414b5999e95034d552a2f51626
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d0adf9158718af86e987e90abd7e90e7fc0ab5c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912991"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405794"
 ---
-# <a name="enum-in-an-interface-cannot-be-declared-specifier"></a>Enumeratore in un'interfaccia non può essere dichiarato '\<identificatore >'
+# <a name="enum-in-an-interface-cannot-be-declared-specifier"></a>L'enumerazione in un'interfaccia non può essere dichiarata come ' \<specifier> '
 Il modificatore specificato con un'enumerazione dichiarata in un'interfaccia non è valido.  
   
  **ID errore:** BC31069  
@@ -25,5 +25,5 @@ Il modificatore specificato con un'enumerazione dichiarata in un'interfaccia non
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [Istruzione Enum](../../visual-basic/language-reference/statements/enum-statement.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
+- [Istruzione Enum](../language-reference/statements/enum-statement.md)
