--- a/docs/visual-basic/misc/bc31119.md
+++ b/docs/visual-basic/misc/bc31119.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31119
 ms.assetid: 4a7e2a71-02d1-41fe-a126-3674288e6efc
-ms.openlocfilehash: d201777cbfc6f334f906fd402d48d823be5cabc0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1ae5968ca2f58b190e878f1839aaf3f48c7c8169
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585335"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405612"
 ---
 # <a name="end-removehandler-must-be-the-first-statement-on-a-line"></a>'End RemoveHandler' deve essere la prima istruzione in una riga
 Un'istruzione `End RemoveHandler` segue un separatore di istruzioni due punti (:). `End RemoveHandler` deve essere l'unica istruzione nella riga di origine.  
@@ -25,6 +25,6 @@ Un'istruzione `End RemoveHandler` segue un separatore di istruzioni due punti (:
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Interrompere e combinare istruzioni nel codice](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
-- [Istruzione RemoveHandler](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Procedura: Interrompere e combinare istruzioni nel codice](../programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
+- [Istruzione RemoveHandler](../language-reference/statements/removehandler-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
