--- a/docs/visual-basic/misc/bc32047.md
+++ b/docs/visual-basic/misc/bc32047.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>' può avere soltanto un vincolo costituito da una classe
+title: Il parametro di tipo '<typeparametername>' può avere soltanto un vincolo costituito da una classe
 ms.date: 07/20/2015
 f1_keywords:
 - bc32047
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32047
 ms.assetid: ac7ab76b-5300-4c79-b519-5a1287ed5fa9
-ms.openlocfilehash: f28035d8d35258a50ccdbe6bc18c93a0480e76fd
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 327050e1da7d294ea9978601e4fbc73e50751556
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912965"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407262"
 ---
-# <a name="type-parameter-typeparametername-can-only-have-one-constraint-that-is-a-class"></a>Parametro di tipo '\<nomeparametrotipo >' può avere soltanto un vincolo costituito da una classe
+# <a name="type-parameter-typeparametername-can-only-have-one-constraint-that-is-a-class"></a>Il parametro di tipo '\<typeparametername>' può avere soltanto un vincolo costituito da una classe
 Un elenco di vincoli include più di una classe.  
   
- Un elenco di vincoli in un parametro di tipo può accettare un numero qualsiasi di interfacce, ma al massimo una classe. Un argomento di tipo fornito per il parametro di tipo deve ereditare da quella classe che Visual Basic non supporta più ereditarietà.  
+ Un elenco di vincoli in un parametro di tipo può accettare un numero qualsiasi di interfacce, ma al massimo una classe. Un argomento di tipo fornito per tale parametro di tipo deve ereditare da tale classe e Visual Basic non supporta l'ereditarietà multipla.  
   
  **ID errore:** BC32047  
   
@@ -29,4 +29,4 @@ Un elenco di vincoli include più di una classe.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
