--- a/docs/visual-basic/misc/bc32079.md
+++ b/docs/visual-basic/misc/bc32079.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32079
 ms.assetid: 93eb59bd-e7db-4f73-a37f-405a83df48c1
-ms.openlocfilehash: cea31dc794a279aa28c56f1c53cc38fd9ffcc18b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cdaa73268fa5150a705a7b6bf2fb9e6daf48a66d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64755995"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407210"
 ---
 # <a name="type-parameters-or-types-constructed-with-type-parameters-are-not-allowed-in-attribute-arguments"></a>I parametri di tipo o i tipi costruiti con parametri di tipo non sono consentiti negli argomenti di attributo
 
@@ -43,5 +43,5 @@ Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Attribute>
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
