--- a/docs/visual-basic/misc/bc32118.md
+++ b/docs/visual-basic/misc/bc32118.md
@@ -1,5 +1,5 @@
 ---
-title: Non accessibile '<genericprocedurename>' accetta questo numero di argomenti tipo
+title: Nessun '<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32118
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32118
 ms.assetid: 4ee942ba-0fa1-4ec1-9c2c-a0c0dc3f1b17
-ms.openlocfilehash: d2d4758b42290d4db90dbe654e87ea6fe3c7b118
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6133d7fa134ddda76985dcfbffc4cf125b4e67e1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640147"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407093"
 ---
-# <a name="no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a>Non accessibile '\<nomeroutinegenerica >' accetta questo numero di argomenti tipo
+# <a name="no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a>Nessun '\<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo
 Un'istruzione chiama una routine generica con più versioni di overload, ma nessuna di tali versioni definisce un numero di parametri di tipo equivalente al numero di argomenti di tipo forniti nella chiamata.  
   
- In presenza di un'unica versione generica, è possibile chiamarla senza argomenti di tipo e il compilatore potrà tentare una *inferenza del tipo*. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md). In presenza di più versioni generiche, tuttavia, il compilatore non riesce a effettuare una scelta se non vengono forniti gli argomenti di tipo. Se viene fornito un solo argomento di tipo, è necessario fornirne uno per ogni parametro di tipo definito da una delle versioni di overload.  
+ In presenza di un'unica versione generica, è possibile chiamarla senza argomenti di tipo e il compilatore potrà tentare una *inferenza del tipo*. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md). In presenza di più versioni generiche, tuttavia, il compilatore non riesce a effettuare una scelta se non vengono forniti gli argomenti di tipo. Se viene fornito un solo argomento di tipo, è necessario fornirne uno per ogni parametro di tipo definito da una delle versioni di overload.  
   
  **ID errore:** BC32118  
   
@@ -27,7 +27,7 @@ Un'istruzione chiama una routine generica con più versioni di overload, ma ness
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload](../../visual-basic/language-reference/modifiers/overloads.md)
-- [Overload della routine](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Overload](../language-reference/modifiers/overloads.md)
+- [Overload della routine](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
