--- a/docs/visual-basic/misc/bc40040.md
+++ b/docs/visual-basic/misc/bc40040.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo di vincolo il parametro generico <typename> non è conforme a CLS
+title: Il tipo di vincolo <typename> per il parametro generico non è conforme a CLS
 ms.date: 07/20/2015
 f1_keywords:
 - bc40040
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC40040
 ms.assetid: c640dd59-56a9-43ed-b199-32a60f7b9b06
-ms.openlocfilehash: 6b9b9966ec073b7e3032b5a1dbdd5a545b95ad4e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c9fff9c42c6de90376f4e6ea951a5315d800ff9c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64601465"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403589"
 ---
-# <a name="generic-parameter-constraint-type-typename-is-not-cls-compliant"></a>Il tipo di vincolo il parametro generico \<typename > non è conforme a CLS
+# <a name="generic-parameter-constraint-type-typename-is-not-cls-compliant"></a>Il tipo di vincolo \<typename> per il parametro generico non è conforme a CLS
 Un tipo generico viene contrassegnato come `<CLSCompliant(True)>`, ma un vincolo su uno dei suoi parametri di tipo consente di specificare un tipo contrassegnato come `<CLSCompliant(False)>`, non contrassegnato o che non si qualifica in quanto è di tipo non compatibile.  
   
- Per un tipo è conforme con la [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), è necessario utilizzare solo tipi conformi a CLS. Questo vale anche per i vincoli sui parametri di tipo di un tipo generico.  
+ Affinché un tipo sia compatibile con l'indipendenza del [linguaggio e i componenti indipendenti dal linguaggio](../../standard/language-independence-and-language-independent-components.md) (CLS), deve utilizzare solo tipi conformi a CLS. Questo vale anche per i vincoli sui parametri di tipo di un tipo generico.  
   
- I seguenti tipi di dati di Visual Basic non sono conformi a CLS:  
+ I tipi di dati Visual Basic seguenti non sono conformi a CLS:  
   
-- [Tipo di dati SByte](../../visual-basic/language-reference/data-types/sbyte-data-type.md)  
+- [Tipo di dati SByte](../language-reference/data-types/sbyte-data-type.md)  
   
-- [Tipo di dati UInteger](../../visual-basic/language-reference/data-types/uinteger-data-type.md)  
+- [Tipo di dati UInteger](../language-reference/data-types/uinteger-data-type.md)  
   
-- [Tipo di dati ULong](../../visual-basic/language-reference/data-types/ulong-data-type.md)  
+- [Tipo di dati ULong](../language-reference/data-types/ulong-data-type.md)  
   
-- [Tipo di dati UShort](../../visual-basic/language-reference/data-types/ushort-data-type.md)  
+- [Tipo di dati UShort](../language-reference/data-types/ushort-data-type.md)  
   
  Quando l'attributo <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità. L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.  
   
@@ -45,4 +45,4 @@ Un tipo generico viene contrassegnato come `<CLSCompliant(True)>`, ma un vincolo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
