--- a/docs/visual-basic/misc/bc30181.md
+++ b/docs/visual-basic/misc/bc30181.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30181
 ms.assetid: 1f272403-8e11-4811-a499-8ca14077a463
-ms.openlocfilehash: c2fd83ab1f230928678794e2da0b2418e4ae10b0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cce3e276c6e3209c8b8c2850da0dc6dbafa05ffd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627505"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403992"
 ---
 # <a name="specifiers-valid-only-at-the-beginning-of-a-declaration"></a>Gli identificatori sono validi solo all'inizio di una dichiarazione
 Le parole chiave che specificano l'accessibilità e altre designazioni devono trovarsi prima della parola chiave di dichiarazione, ad esempio `Dim` o `Function`.  
@@ -25,8 +25,8 @@ Le parole chiave che specificano l'accessibilità e altre designazioni devono tr
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Class](../../visual-basic/language-reference/statements/class-statement.md)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Istruzione Class](../language-reference/statements/class-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
