--- a/docs/visual-basic/misc/bc30182.md
+++ b/docs/visual-basic/misc/bc30182.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30182
 ms.assetid: 896e3936-7caa-4083-8058-9018ddabc65b
-ms.openlocfilehash: f88c776a1029b251b3aeae579003550adcdc269e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 15b0b53bf57861e48179771c9bf4b0395d85c740
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658564"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403979"
 ---
 # <a name="type-expected"></a>Tipo previsto
 Vengono visualizzati caratteri del codice sorgente non riconosciuti come nome di tipo. Il contesto chiama un tipo di dati elementare o un nome di elemento dichiarato che rappresenta un tipo.  
@@ -27,8 +27,8 @@ Vengono visualizzati caratteri del codice sorgente non riconosciuti come nome di
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Class](../../visual-basic/language-reference/statements/class-statement.md)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Istruzione Class](../language-reference/statements/class-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
