--- a/docs/visual-basic/misc/bc30233.md
+++ b/docs/visual-basic/misc/bc30233.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di costante"
+title: "' <specifier> ' non valido in una dichiarazione di costante"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30233
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30233
 ms.assetid: 6f01278c-0404-4282-b42e-c750e6907ee9
-ms.openlocfilehash: abed341f65ac6a7f670d81982cf9e8bebe39f17d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4fad1373d25fab860655b6c0b396ee18dd835c7e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027927"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402603"
 ---
-# <a name="specifier-is-not-valid-on-a-constant-declaration"></a>'\<identificatore >' non è valido in una dichiarazione di costante
+# <a name="specifier-is-not-valid-on-a-constant-declaration"></a>' \<specifier> ' non valido in una dichiarazione di costante
 Un'istruzione `Const` contiene una parola chiave non valida. Un'istruzione `Const` può includere solo le parole chiave `Friend`, `Private`, `Protected`, `Public`o `Shadows` .  
   
  **ID errore:** BC30233  
@@ -27,4 +27,4 @@ Un'istruzione `Const` contiene una parola chiave non valida. Un'istruzione `Cons
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Const](../../visual-basic/language-reference/statements/const-statement.md)
+- [Istruzione Const](../language-reference/statements/const-statement.md)
