--- a/docs/visual-basic/misc/bc30294.md
+++ b/docs/visual-basic/misc/bc30294.md
@@ -1,5 +1,5 @@
 ---
-title: "Struttura '<structurename>' non può contenere un'istanza di se stessa: <error>"
+title: "La struttura '<structurename>' non può contenere un'istanza di se stessa: <error>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30294
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30294
 ms.assetid: 17780e11-2425-4860-9345-b5db019d2bf3
-ms.openlocfilehash: 14ed934243896472d6b53d8cd7498415ff7f4527
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: b48a6e540085acfd95959fa0208c0ffc4983b92d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61976430"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406262"
 ---
-# <a name="structure-structurename-cannot-contain-an-instance-of-itself-error"></a>Struttura»\<nomestruttura >' non può contenere un'istanza di se stessa: \<errore >
+# <a name="structure-structurename-cannot-contain-an-instance-of-itself-error"></a>La struttura '\<structurename>' non può contenere un'istanza di se stessa: \<error>
 Una struttura dichiara una variabile e la inizializza con un'istanza di se stessa.  
   
  Una struttura può contenere istanze di altre strutture, ma non un'istanza interna di se stessa. Un tentativo di eseguire questa operazione potrebbe causare una ricorsione infinita.  
@@ -29,5 +29,5 @@ Una struttura dichiara una variabile e la inizializza con un'istanza di se stess
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture](../../visual-basic/programming-guide/language-features/data-types/structures.md)
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Strutture](../programming-guide/language-features/data-types/structures.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
