--- a/docs/visual-basic/misc/bc30385.md
+++ b/docs/visual-basic/misc/bc30385.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione Delegate"
+title: "' <modifier> ' non valido in una dichiarazione di delegato"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30385
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30385
 ms.assetid: cacbcdc7-dca9-4a22-b3bf-7e264308c031
-ms.openlocfilehash: 4f6de1d507b91c31b06bbf24f1079783fa2cb8c7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: b012409e2b57f28405de2640c84a62f787c8a8eb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61976040"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403693"
 ---
-# <a name="modifier-is-not-valid-on-a-delegate-declaration"></a>'\<modificatore >' non è valido in una dichiarazione Delegate
+# <a name="modifier-is-not-valid-on-a-delegate-declaration"></a>' \<modifier> ' non valido in una dichiarazione di delegato
 Si è provato a usare un modificatore, ad esempio `Shared`, in una dichiarazione di delegato. I delegati sono oggetti usati per chiamare i metodi di altri oggetti tramite la definizione di un costruttore a cui viene passata la specifica di un metodo di oggetto. Non è consentito specificare un modificatore in una dichiarazione di delegato.  
   
  **ID errore:** BC30385  
@@ -25,5 +25,5 @@ Si è provato a usare un modificatore, ad esempio `Shared`, in una dichiarazione
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Procedura: Richiamare un metodo delegato](../../visual-basic/programming-guide/language-features/delegates/how-to-invoke-a-delegate-method.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Procedura: richiamare un metodo delegato](../programming-guide/language-features/delegates/how-to-invoke-a-delegate-method.md)
