--- a/docs/visual-basic/misc/bc30726.md
+++ b/docs/visual-basic/misc/bc30726.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30726
 ms.assetid: b08cec13-9283-419a-a97f-25fa756adecf
-ms.openlocfilehash: 676633284dfa4bf0a42b2d093c5c842b38f4541f
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 097c55436daa7afd0966815ca7d14590e7fa56b7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73196778"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406015"
 ---
 # <a name="with-contexts-and-statements-are-not-valid-in-debug-windows"></a>I contesti e le istruzioni 'With' non sono validi nelle finestre di debug
 Le istruzioni`With` possono essere usate solo nel codice sorgente.  
@@ -25,5 +25,5 @@ Le istruzioni`With` possono essere usate solo nel codice sorgente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione With...End With](../../visual-basic/language-reference/statements/with-end-with-statement.md)
+- [Istruzione With...End With](../language-reference/statements/with-end-with-statement.md)
 - [Debug in Visual Studio](/visualstudio/debugger/debugger-feature-tour)
