--- a/docs/visual-basic/misc/bc30728.md
+++ b/docs/visual-basic/misc/bc30728.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30728
 ms.assetid: 64c70bb5-3696-4865-8194-328394c2b4b1
-ms.openlocfilehash: 2521da75e9d659e7483b786d3ea2401ad1d75a02
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 85b7a8189c6c9699177abf3d40944d99e1161d4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657235"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406002"
 ---
 # <a name="methods-declared-in-structures-cannot-have-handles-clauses"></a>I metodi dichiarati nelle strutture non possono contenere clausole 'Handles'
 I metodi per la struttura non possono usare la parola chiave `Handles` per gestire gli eventi.  
@@ -27,6 +27,6 @@ I metodi per la struttura non possono usare la parola chiave `Handles` per gesti
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture e classi](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+- [Strutture e classi](../programming-guide/language-features/data-types/structures-and-classes.md)
 
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Events](../programming-guide/language-features/events/index.md)
