--- a/docs/visual-basic/misc/bc31067.md
+++ b/docs/visual-basic/misc/bc31067.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31067
 ms.assetid: 8f854f5f-99b1-40c9-8c21-e24712f37f71
-ms.openlocfilehash: 895e9ae5fb72ec4ac32990919888a31d56d5d87a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6ff9ed0b9630fc132bb38531824cad3c19772c71
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665653"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405820"
 ---
 # <a name="method-in-a-structure-cannot-be-declared-protected-or-protected-friend"></a>Il metodo in una struttura non può essere dichiarato come 'Protected' o 'Protected Friend'
 Un metodo in una struttura è stato dichiarato come `Protected` o `Protected Friend`.  
@@ -25,6 +25,6 @@ Un metodo in una struttura è stato dichiarato come `Protected` o `Protected Fri
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Protected](../../visual-basic/language-reference/modifiers/protected.md)
-- [Friend](../../visual-basic/language-reference/modifiers/friend.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
+- [Protetto](../language-reference/modifiers/protected.md)
+- [Amico](../language-reference/modifiers/friend.md)
