--- a/docs/visual-basic/misc/bc31068.md
+++ b/docs/visual-basic/misc/bc31068.md
@@ -1,5 +1,5 @@
 ---
-title: Il delegato in un'interfaccia non può essere dichiarato '<specifier>'
+title: Il delegato in un'interfaccia non può essere dichiarato come ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc31068
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31068
 ms.assetid: 5d62515b-0678-449a-983b-697e15aac621
-ms.openlocfilehash: a122cebb1232b898c4c91ae9b8396b1cf00b2fa8
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 2521ce0cad5cf537fbbad2c57729a994972d536f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958587"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405807"
 ---
-# <a name="delegate-in-an-interface-cannot-be-declared-specifier"></a>Il delegato in un'interfaccia non può essere dichiarato '\<identificatore >'
+# <a name="delegate-in-an-interface-cannot-be-declared-specifier"></a>Il delegato in un'interfaccia non può essere dichiarato come ' \<specifier> '
 Il modificatore specificato con un delegato dichiarato nell'interfaccia non è valido.  
   
  **ID errore:** BC31068  
@@ -25,4 +25,4 @@ Il modificatore specificato con un delegato dichiarato nell'interfaccia non è v
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
