--- a/docs/visual-basic/misc/bc31073.md
+++ b/docs/visual-basic/misc/bc31073.md
@@ -1,5 +1,5 @@
 ---
-title: «<name1>' è in conflitto con un <type> con lo stesso nome definito in '<name2>»
+title: "' <name1> ' è in conflitto con un oggetto <type> con lo stesso nome definito in ' <name2> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31073
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31073
 ms.assetid: cb44155b-2d6f-4c1d-a8c9-7cc098846fd2
-ms.openlocfilehash: c401ad79fa3e3dcbabb867938afffa8a58c5a2db
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5d42d8fa7f95699f16781942910eb8bf1b754643
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958444"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405742"
 ---
-# <a name="name1-conflicts-with-a-type-by-the-same-name-defined-in-name2"></a>'\<name1 >' è in conflitto con un \<tipo > con lo stesso nome definito in '\<nome2 >'
+# <a name="name1-conflicts-with-a-type-by-the-same-name-defined-in-name2"></a>' \<name1> ' è in conflitto con un oggetto \<type> con lo stesso nome definito in ' \<name2> '
 È stato rilevato un nome in conflitto con un tipo con lo stesso nome.  
   
  **ID errore:** BC31073  
@@ -27,4 +27,4 @@ ms.locfileid: "61958444"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Struttura del programma e convenzioni di scrittura del codice](../../visual-basic/programming-guide/program-structure/program-structure-and-code-conventions.md)
+- [Struttura del programma e convenzioni del codice](../programming-guide/program-structure/program-structure-and-code-conventions.md)
