--- a/docs/visual-basic/misc/bc31116.md
+++ b/docs/visual-basic/misc/bc31116.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31116
 ms.assetid: 49031274-e048-41d8-aec8-6ea005964225
-ms.openlocfilehash: 1a0ed333ce6323fb67e4f504557655649cc7f68f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6bb6fe5a86407b49e8a858ffabe3869a733a2ee5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585315"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405651"
 ---
 # <a name="removehandler-declaration-must-end-with-a-matching-end-removehandler"></a>La dichiarazione 'RemoveHandler' deve terminare con un oggetto 'End RemoveHandler' corrispondente
 Una dichiarazione `RemoveHandler` deve terminare con un'istruzione `End RemoveHandler` .  
@@ -25,5 +25,5 @@ Una dichiarazione `RemoveHandler` deve terminare con un'istruzione `End RemoveHa
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione RemoveHandler](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione RemoveHandler](../language-reference/statements/removehandler-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
