--- a/docs/visual-basic/misc/bc31117.md
+++ b/docs/visual-basic/misc/bc31117.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31117
 ms.assetid: 1f922880-de2e-4ebd-9968-bf1ebac2aab7
-ms.openlocfilehash: 26bea4fb4ad895c6cfb4401fbbf591ffff0f198d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5dd4a5a897473958fb4c6fb49b0422c7a1a96aee
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585557"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405637"
 ---
 # <a name="raiseevent-declaration-must-end-with-a-matching-end-raiseevent"></a>La dichiarazione 'RaiseEvent' deve terminare con un oggetto 'End RaiseEvent' corrispondente
 Una dichiarazione `RaiseEvent` deve terminare con un'istruzione `End RaiseEvent` .  
@@ -25,5 +25,5 @@ Una dichiarazione `RaiseEvent` deve terminare con un'istruzione `End RaiseEvent`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione RaiseEvent](../../visual-basic/language-reference/statements/raiseevent-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione RaiseEvent](../language-reference/statements/raiseevent-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
