--- a/docs/visual-basic/misc/bc31150.md
+++ b/docs/visual-basic/misc/bc31150.md
@@ -1,5 +1,5 @@
 ---
-title: Tag di fine <-tagName > previsto
+title: È previsto il tag di fine <-tagName>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31150
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31150
 ms.assetid: 92cd9fef-29f0-446b-b7a5-229a8e345fae
-ms.openlocfilehash: ad7f0238fb7ab814af640b84a1a8637f06e75c67
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6821884eb2d9ab60db054216ff456fa09183dd73
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591956"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403641"
 ---
-# <a name="end-tag-tagname-expected"></a>Tag di fine \</tagName > previsto
+# <a name="end-tag-tagname-expected"></a>È previsto un tag di fine \</tagName>
 Il tag di fine in un valore letterale elemento XML non corrisponde al tag di inizio corrispondente.  
   
  **ID errore:** BC31150  
@@ -25,5 +25,5 @@ Il tag di fine in un valore letterale elemento XML non corrisponde al tag di ini
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
