--- a/docs/visual-basic/misc/bc31181.md
+++ b/docs/visual-basic/misc/bc31181.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31181
 ms.assetid: 37137965-bba1-45ee-b4e9-1bf2d5388802
-ms.openlocfilehash: c8827038dd1e8c830e81f2a26440e38ffdb0c3b6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ecd4b8c5ce5185752de69c0ea25fc013f06a18d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665529"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405430"
 ---
 # <a name="attribute-value-is-not-valid-expecting-value"></a>Valore di attributo non valido. Previsto 'value'
 È stato specificato un valore non valido per un attributo in un valore letterale documento XML. I valori degli attributi validi per un valore letterale documento XML sono indicati nella specifica XML 1.0.  
@@ -25,6 +25,6 @@ ms.locfileid: "64665529"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valori letterali XML e specifica XML 1.0](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML e specifica XML 1.0](../programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
