--- a/docs/visual-basic/misc/bc32042.md
+++ b/docs/visual-basic/misc/bc32042.md
@@ -1,5 +1,5 @@
 ---
-title: Numero insufficiente di argomenti tipo per '<genericMethodName>'
+title: Argomenti di tipo insufficienti in ' <genericMethodName> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32042
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32042
 ms.assetid: e887b068-4e84-4cb4-9649-94fe162a821e
-ms.openlocfilehash: 0da35fd26cb0eba170433c3e8ff1aa4097f9ad4a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be395040f7ade4734a1c7f4090b7d46693d77b21
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618837"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407327"
 ---
-# <a name="too-few-type-arguments-to-genericmethodname"></a>Numero insufficiente di argomenti tipo per '\<genericMethodName >'
+# <a name="too-few-type-arguments-to-genericmethodname"></a>Argomenti di tipo insufficienti in ' \<genericMethodName> '
 È stato richiamato un metodo generico con meno argomenti di tipo rispetto ai parametri di tipo.  
   
  Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.  
@@ -27,6 +27,6 @@ ms.locfileid: "64618837"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
