--- a/docs/visual-basic/misc/bc32044.md
+++ b/docs/visual-basic/misc/bc32044.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'non ereditare o implementare il tipo di vincolo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' non eredita da o implementa il tipo di vincolo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32044
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32044
 ms.assetid: be91f648-c07d-4991-8ed1-28b1327619c4
-ms.openlocfilehash: 4136f1641bd0195af0e1de618be266e1d73cf123
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 8515e084c5acf357f20a9b9ead0673f50ef6b78b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912835"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407307"
 ---
-# <a name="type-argument-typeargumentname-does-not-inherit-from-or-implement-the-constraint-type-typeparametername"></a>Argomento di tipo '\<nomeargomentotipo >' non ereditare o implementare il tipo di vincolo '\<nomeparametrotipo >'
+# <a name="type-argument-typeargumentname-does-not-inherit-from-or-implement-the-constraint-type-typeparametername"></a>L'argomento di tipo ' \<typeargumentname> ' non eredita da o implementa il tipo di vincolo ' \<typeparametername> '
 Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di ereditarietà o implementazione sul suo parametro di tipo corrispondente.  
   
  Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo. Ecco alcuni possibili requisiti:  
@@ -23,7 +23,7 @@ Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di eredi
   
 - L'argomento di tipo deve ereditare al massimo da una classe  
   
- È possibile combinare i requisiti precedenti per un parametro di tipo singolo. Visual Basic non è possibile creare il tipo, a meno che il codice fornisca gli argomenti di tipo che soddisfano ogni vincolo su ogni parametro di tipo definito nel tipo generico.  
+ È possibile combinare i requisiti precedenti per un parametro di tipo singolo. Visual Basic non può costruire il tipo a meno che il codice non fornisca gli argomenti di tipo che soddisfano ogni vincolo su ogni parametro di tipo definito nel tipo generico.  
   
  **ID errore:** BC32044  
   
@@ -33,5 +33,5 @@ Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di eredi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Procedura: Usare una classe generica](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Procedura: Usare una classe generica](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
