--- a/docs/visual-basic/misc/bc32049.md
+++ b/docs/visual-basic/misc/bc32049.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro già dichiarato con il nome di tipo '<typeparametername>'
+title: Parametro di tipo già dichiarato con il nome ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32049
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32049
 ms.assetid: d7affad0-0c3d-4fce-a1c2-a17f65514471
-ms.openlocfilehash: 387c59afd19950de03c074fcf660fa0c19bd733c
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: a8b7a5124a736c6d73ff571c2b331c5bafb4860b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912803"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407236"
 ---
-# <a name="type-parameter-already-declared-with-name-typeparametername"></a>Parametro già dichiarato con il nome di tipo '\<nomeparametrotipo >'
+# <a name="type-parameter-already-declared-with-name-typeparametername"></a>Parametro di tipo già dichiarato con il nome ' \<typeparametername> '
 Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un altro parametro di tipo dello stesso tipo generico.  
   
  Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:  
@@ -33,5 +33,5 @@ Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
