--- a/docs/visual-basic/misc/bc32052.md
+++ b/docs/visual-basic/misc/bc32052.md
@@ -1,5 +1,5 @@
 ---
-title: Operando di tipo ' is' '<typeparametername>' è possibile confrontare solo con 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
+title: È possibile confrontare l'operando 'Is' del tipo '<typeparametername>' solo a 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32052
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32052
 ms.assetid: 0bbf2249-eb0d-4b74-a555-8868c7ebe91d
-ms.openlocfilehash: b086cb242e92802de3fd9c9c7d39280f76fbb227
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 82d76817a7eee2e72a7e3e2ab32f22022c7d062e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64645255"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412026"
 ---
-# <a name="is-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a>Operando di tipo ' is' '\<nomeparametrotipo >' è possibile confrontare solo con 'Nothing' perché '\<nomeparametrotipo >' è un parametro di tipo senza vincoli di classe
-Un parametro di tipo viene utilizzato come operando per il [operatore Is](../../visual-basic/language-reference/operators/is-operator.md) quando il parametro di tipo viene definito senza la [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) parola chiave o un nome di classe specifico nell'elenco di vincoli.  
+# <a name="is-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a>È possibile confrontare l'operando 'Is' del tipo '\<typeparametername>' solo a 'Nothing' perché '\<typeparametername>' è un parametro di tipo senza vincoli di classe
+Un parametro di tipo viene usato come operando per l' [operatore is](../language-reference/operators/is-operator.md) quando il parametro di tipo viene definito senza la parola chiave [Class (Visual Basic)](../language-reference/statements/class-statement.md) o un nome di classe specifico nell'elenco di vincoli.  
   
- `Is` confronta due tipi riferimento per determinare se puntano alla stessa istanza di oggetti in memoria. Non può accettare un operando che non è un tipo riferimento, a meno che l'altro operando [Nothing](../../visual-basic/language-reference/nothing.md).  
+ `Is` confronta due tipi riferimento per determinare se puntano alla stessa istanza di oggetti in memoria. Non può assumere un operando che non è un tipo di riferimento, a meno che l'altro operando non sia [null](../language-reference/nothing.md).  
   
  **ID errore:** BC32052  
   
@@ -29,7 +29,7 @@ Un parametro di tipo viene utilizzato come operando per il [operatore Is](../../
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
