--- a/docs/visual-basic/misc/bc32115.md
+++ b/docs/visual-basic/misc/bc32115.md
@@ -1,5 +1,5 @@
 ---
-title: "'System. Nullable' non soddisfa il vincolo 'Structure' per il parametro di tipo '<typeparametername>'"
+title: "' System. Nullable ' non soddisfa il vincolo ' Structure ' per il parametro di tipo ' <typeparametername> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32115
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32115
 ms.assetid: 98053645-fa76-4826-a7c1-f1bdf3511863
-ms.openlocfilehash: 0f353ce85f719f6e1b16533ba5a10b511ecf0a00
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d8e762f79df2d3fde989c4fe8409b05f592de2a5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640224"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407132"
 ---
-# <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-typeparametername"></a>'System. Nullable' non soddisfa il vincolo 'Structure' per il parametro di tipo '\<nomeparametrotipo >'
+# <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-typeparametername"></a>' System. Nullable ' non soddisfa il vincolo ' Structure ' per il parametro di tipo ' \<typeparametername> '
 Un tipo generico viene richiamato passando un argomento di tipo di <xref:System.Nullable%601> a un parametro di tipo con un vincolo `Structure` .  
   
  Common Language Runtime non consente la struttura <xref:System.Nullable%601> come argomento di tipo di se stessa. Anche se si tratta di una struttura e soddisferebbe altrimenti un vincolo `Structure` , il suo uso ricorsivo potrebbe portare alla creazione di costruzioni complesse come `Nullable(Of Nullable(Of Nullable))`.  
@@ -28,5 +28,5 @@ Un tipo generico viene richiamato passando un argomento di tipo di <xref:System.
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Nullable%601>
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Structure (Visual Basic)](../language-reference/statements/structure-statement.md)
