--- a/docs/visual-basic/misc/bc36605.md
+++ b/docs/visual-basic/misc/bc36605.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36605
 ms.assetid: d0397b6e-bfc2-400c-92fc-efe82036cfdb
-ms.openlocfilehash: e5f30c263827723a524986440fca02276cdbae7c
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 64b5df41d890cb575d38bcea0a3173be083e0fa1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970742"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407054"
 ---
 # <a name="by-expected"></a>Previsto 'By'
 Una clausola `Order By` o `Group By` è stata specificata senza la parola chiave `By` .  
@@ -33,8 +33,8 @@ Dim customersByCountry = From cust In customers _
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Risultati della Query di ordinamento](../../visual-basic/programming-guide/language-features/linq/how-to-sort-query-results-by-using-linq.md)
-- [Clausola Order By](../../visual-basic/language-reference/queries/order-by-clause.md)
-- [Clausola Group By](../../visual-basic/language-reference/queries/group-by-clause.md)
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [Procedura: Ordinare i risultati di query](../programming-guide/language-features/linq/how-to-sort-query-results-by-using-linq.md)
+- [Clausola Order By](../language-reference/queries/order-by-clause.md)
+- [Clausola Group By](../language-reference/queries/group-by-clause.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../programming-guide/language-features/linq/index.md)
