--- a/docs/visual-basic/misc/bc36661-bc36658.md
+++ b/docs/visual-basic/misc/bc36661-bc36658.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo<methodname>nel metodo di estensione '' definito in ' typename ' perché non vengono convertiti nello stesso tipo
+title: Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo di estensione '<methodname>' definito in 'typename' perché non vengono convertiti nello stesso tipo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36658
@@ -10,16 +10,16 @@ helpviewer_keywords:
 - BC36661
 - BC36658
 ms.assetid: 0bff97fd-cbe9-4433-8192-6498c6fb5d04
-ms.openlocfilehash: 60e7646d4d69d2a2ab3c45e3f31b62311e47c4cc
-ms.sourcegitcommit: f20dd18dbcf2275513281f5d9ad7ece6a62644b4
+ms.openlocfilehash: 90404690d9805cc8dc5f96444f4b79d45c4307e1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/30/2019
-ms.locfileid: "68631010"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406989"
 ---
-# <a name="data-types-of-the-type-parameters-in-extension-method-methodname-defined-in-typename-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a>Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo\<nel metodo di estensione ' methodName >' definito in ' typename ' perché non vengono convertiti nello stesso tipo
+# <a name="data-types-of-the-type-parameters-in-extension-method-methodname-defined-in-typename-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a>Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo di estensione '\<methodname>' definito in 'typename' perché non vengono convertiti nello stesso tipo
 
-Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo\<nel metodo di estensione ' methodName >' definito in ' typename ' perché non vengono convertiti nello stesso tipo. Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.
+Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo di estensione ' \<methodname> ' definito in ' typename ' perché non vengono convertiti nello stesso tipo. Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.
 
 Si è provato a usare l'inferenza del tipo per determinare il tipo (o i tipi) di dati del parametro (o dei parametri) di tipo durante la valutazione di una chiamata a un metodo di estensione generico. Il compilatore non ha trovato un tipo di dati che soddisfi i vincoli di tutti gli argomenti. Di conseguenza, ha segnalato questo errore.
 
@@ -68,9 +68,9 @@ End Module
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Conversione di tipo relaxed del delegato](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [Funzioni di conversione del tipo](../../visual-basic/language-reference/functions/type-conversion-functions.md)
-- [Conversioni implicite ed esplicite](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Conversione di tipo relaxed del delegato](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
+- [CString](../language-reference/functions/type-conversion-functions.md)
+- [Conversioni implicite ed esplicite](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
