--- a/docs/visual-basic/misc/bc40048.md
+++ b/docs/visual-basic/misc/bc40048.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>' ha lo stesso nome di un parametro di tipo di un tipo di inclusione
+title: Il parametro '<typeparametername>' ha lo stesso nome di un parametro di tipo di un tipo di inclusione
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40048
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC40048
 ms.assetid: d5428b36-88d3-42c4-a096-cbc7bb9571f2
-ms.openlocfilehash: 9fef1ac3e7b245da733697898b118e9760b3092c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2e0a56f26838deba494e900b1f7ba4629af725d1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632248"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402369"
 ---
-# <a name="type-parameter-typeparametername-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a>Parametro di tipo '\<nomeparametrotipo >' ha lo stesso nome di un parametro di tipo di un tipo di inclusione
+# <a name="type-parameter-typeparametername-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a>Il parametro '\<typeparametername>' ha lo stesso nome di un parametro di tipo di un tipo di inclusione
 Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un parametro di tipo di un tipo generico contenitore.  
   
  Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:  
@@ -35,5 +35,5 @@ Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
